kubernetes/apps/media-toolkit-webtop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-toolkit-webtop
spec:
  selector:
    app: media-toolkit-webtop
  ports:
    - protocol: TCP
      port: 3000
